<resources>
    <string name="app_name">Master Claculator</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="calculation_utilities">Calculation Utilities</string>
    <string name="know_more"><![CDATA[Know More  ->]]></string>
    <string name="discound">Discound</string>
    <string name="intrest">Intrest</string>
    <string name="mutual_fund">Mutual Fund</string>
    <string name="emi">EMI</string>
    <string name="school_result">School Result</string>
    <string name="square_or_hour">Square or Hour</string>
    <string name="mutual_fund_calculator">Mutual Fund Calculator</string>
    <string name="montly_investment">Montly Investment</string>
    <string name="expected_return_in">Expected Return in(%)</string>
    <string name="clear_all">Clear all</string>
    <string name="time_period_in_yr">Time Period in (Yr)</string>
    <string name="calculate">Calculate</string>
    <string name="invested">Invested</string>
    <string name="est_returns">Est. Returns</string>
    <string name="total_value">Total Value</string>
    <string name="interest_calculator">Interest Calculator</string>
    <string name="pricncipal_amount">Pricncipal Amount</string>
    <string name="interest_rate_in">Interest Rate in (%)</string>
    <string name="interest_amount">Interest Amount</string>
    <string name="price">Price</string>
    <string name="count">Count</string>
    <string name="result">Result</string>
    <string name="price_after_discount">Price After Discount :</string>
    <string name="save_amount">Save Amount :</string>
    <string name="emi_calculator">EMI Calculator</string>
    <string name="enter_discount_in">Enter Discount (in %)</string>
    <string name="enter_price_amount">Enter Price Amount</string>
    <string name="total_marks">Total Marks</string>
    <string name="your_total_marks">Your Total Marks</string>
    <string name="your_marks">Your Marks</string>
    <string name="your_percentage">Your Percentage</string>
    <string name="input_number">Input Number</string>
    <string name="number">Number</string>
    <string name="add_square_or_hour">Add Square or Hour</string>
    <string name="suqare_or_hour">Suqare or Hour</string>
</resources>