<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".X2Activity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints,UseCompoundDrawables"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_gravity="center"
            android:layout_marginStart="20sp"
            app:srcCompat="@drawable/backarro"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/square_or_hour"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_number"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="175sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtnumber"
                    android:layout_width="175sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/number"
                    android:textColorHint="#546E7A"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_square_or_hour"
                android:textStyle="bold"
                android:layout_marginEnd="5sp"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="175sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginEnd="10sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtsquareorhour"
                    android:layout_width="175sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/suqare_or_hour"
                    android:textColorHint="#546E7A"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            app:cardCornerRadius="18sp"
            app:cardElevation="35sp"
            android:layout_gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:textSize="25sp"
                android:background="@drawable/round_butten"/>


        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="20sp"/>

        <EditText
            android:id="@+id/edtresult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="---"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="Autofill,HardcodedText,TextFields,TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>