<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".SchoolResultActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/backarro" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/school_result"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:text="@string/total_marks"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="175sp"
               android:layout_height="wrap_content"
               style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
               android:layout_marginStart="80sp">

               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="175sp"
                   android:layout_height="wrap_content"
                   android:hint="@string/total_marks"/>

           </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:text="@string/your_total_marks"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="175sp"
                android:layout_height="wrap_content"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
                android:layout_marginStart="30sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="175sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_marks"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:layout_gravity="center"
            android:backgroundTint="@color/nevyblue"
            app:cardCornerRadius="18sp"
            app:cardElevation="35sp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_butten"
            android:text="@string/calculate"
            android:textSize="25sp"
            android:layout_gravity="center" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_percentage"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="---"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>