<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MutualcalcActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/backarrow"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/backarro" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/mutual_fund_calculator"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/montly_investment"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="175sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtmontly"
                    android:layout_width="175sp"
                    android:inputType="number"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expected_return_in"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="175sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtreturnpr"
                    android:layout_width="175sp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_period_in_yr"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="175sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="43sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edttimeyr"
                    android:layout_width="175sp"
                    android:inputType="number"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txtclearall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20sp"
            android:text="@string/clear_all"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            app:cardBackgroundColor="@color/nevyblue"
            app:cardCornerRadius="20sp"
            app:cardElevation="35sp">

            <Button
                android:id="@+id/btncalculate"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5sp"
                android:background="@drawable/round_butten"
                android:text="@string/calculate"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:text="@string/invested"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:text="@string/est_returns"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:text="@string/total_value"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtinvested"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="- - -"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="Autofill,HardcodedText,TextFields,DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100sp"
                android:hint="- - -"
                android:importantForAutofill="no"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="HardcodedText,TextFields,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edttotalvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100sp"
                android:hint="- - -"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="Autofill,HardcodedText,TextFields,TouchTargetSizeCheck" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>